--- a/blog/templates/blog/layout/footer.html
+++ b/blog/templates/blog/layout/footer.html
@@ -1,10 +1,7 @@
-{% extends 'blog/base.html' %}
-
 {% block footer %}
     <footer class="footer bg-dark text-white py-4 fixed-bottom">
         <div class="container text-center">
-            <span>{{ footer.content }}</span>
+            <span>© 2023 커뮤니티. All rights reserved.</span>
         </div>
     </footer>
 {% endblock %}
-
