--- a/blog/templates/blog/post/post_create.html
+++ b/blog/templates/blog/post/post_create.html
@@ -10,7 +10,6 @@
     <script>
         CKEDITOR.replace('editor');
     </script>
-    <button type="submit" class="save btn btn-default" name="action" value="save" style="
-    margin-top: 10px;">저장</button>
+    <button type="submit" class="save btn btn-default" name="action" value="save" style="margin-top: 10px;">저장</button>
 </form>
 {% endblock %}
