--- a/blog/templates/accounts/login.html
+++ b/blog/templates/accounts/login.html
@@ -2,24 +2,22 @@
 
 {% block content %}
     {% if form.errors %}
-        <p>이름과 비밀번호가 일치하지 않습니다. 다시 시도해주세요.</p>
+        <p class="text-danger">이름과 비밀번호가 일치하지 않습니다. 다시 시도해주세요.</p>
     {% endif %}
 
     <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-        <table>
-        <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
-        </tr>
-        </table>
+        {% csrf_token %}
+        <div class="mb-3">
+            <label for="{{ form.username.id_for_label }}" class="form-label">{{ form.username.label_tag }}</label>
+            {{ form.username }}
+        </div>
+        <div class="mb-3">
+            <label for="{{ form.password.id_for_label }}" class="form-label">{{ form.password.label_tag }}</label>
+            {{ form.password }}
+        </div>
 
-        <input type="submit" value="login" />
+        <button type="submit" class="btn btn-primary">Login</button>
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
-    <p>아직 계정이 없으신가요? <a href="{% url 'account_signup' %}">회원가입</a></p>
-{% endblock %} 
+    <p>아직 계정이 없으신가요? <a href="{% url 'account_signup' %}" class="btn btn-link">회원가입</a></p>
+{% endblock %}
