--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,84 +8,27 @@
     <title>MyDjango Blog Project!</title>
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'js/post_draft_list.js' %}"></script>
     <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
     <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
-    <script type="text/javascript">
-        function getFetchVersion(file) {
-            return new Promise((resolve, reject) => {
-                fetch(file)
-                    .then(r => {
-                        let lastModGmt = new Date(r.headers.get('Last-Modified'));
-                        let lastModUtc = new Date(lastModGmt.getTime() + (lastModGmt.getTimezoneOffset() * 60000) + (9 * 60 * 60000));
-                        resolve(fetchCallback(file + '?' + lastModUtc.toLocaleString()));
-                    })
-                    .catch(er => {
-                        reject(er.message);
-                    });
-            });
-        }
-
-        function fetchCallback(path) {
-            let link = document.createElement("link");
-            link.type = "text/css";
-            link.rel = "stylesheet";
-            link.href = path;
-            document.getElementsByTagName("head")[0].appendChild(link);
-        }
-
-        getFetchVersion('/static/css/blog.css')
-            .catch(error => {
-                console.error(error);
-            });
-    </script>
-
+    {% block scripts%}
+        {% include 'blog/functions/scripts.html'%}
+    {% endblock%}
 </head>
 
 <body>
     <div id="content body-wrapper mb-3" style="margin-bottom: 8.5rem !important;">
         {% comment %} 네비게이션 바 {% endcomment %}
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="/">두리의 놀이터</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="네비게이션 토글">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">로그아웃</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'post_create' %}"><i class="bi bi-pencil-square top-fn-btn-style"></i></a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'login' %}">로그인</a>
-                        </li>
-                        {% endif %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">소개</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">연락처</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        {% block nav %}
+            {% include 'blog/layout/navigation.html' %}
+        {% endblock %}
         {% comment %}  히어로 섹션 {% endcomment %}
-        <section class="jumbotron text-center my-3">
-            <div class="container">
-                <h1 class="display-4">커뮤니티에 오신 것을 환영합니다</h1>
-                <p class="lead">우리 커뮤니티에 참여하여 비슷한 관심사를 가진 사람들과 연결하세요.</p>
-            </div>
-        </section>
+        {% block section %}
+            {% include 'blog/layout/section.html' %}
+        {% endblock %}
 
         {% comment %} 주요 콘텐츠 {% endcomment %}
         <main id="body-content" class="container my-3">
@@ -113,16 +55,12 @@
                 </div>
             </div>
         </main>
-        {% comment %} Footer {% endcomment %}
-
+        {% comment %} footer {% endcomment %}
+        {% block footer %}
+            {% include 'blog/layout/footer.html' %}
+        {% endblock %}
+        {% comment %} footer End {% endcomment %}
     </div>
-    {% comment %} 푸터 {% endcomment %}
-
-    <footer class="footer bg-dark text-white py-4 fixed-bottom">
-        <div class="container text-center">
-            <span>© 2023 커뮤니티. All rights reserved.</span>
-        </div>
-    </footer>
 
 
 </body>
