로그인 로직 변경 및 부트스트렙 스타일 적용

--- a/blog/templates/blog/layout/navigation.html
+++ b/blog/templates/blog/layout/navigation.html
@@ -1,4 +1,5 @@
 {% block nav %}
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="/">두리의 놀이터</a>
@@ -18,7 +19,8 @@
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'login' %}">로그인</a>
+                    {% comment %} <a class="nav-link" aria-current="page" href="{% url 'login' %}">로그인</a> {% endcomment %}
+                    <div class="nav-link loginbtn" aria-current="page">로그인</div>
                 </li>
                 {% endif %}
                 <li class="nav-item">
