--- a/blog/templates/account/login.html
+++ b/blog/templates/account/login.html
@@ -1,13 +1,14 @@
 {% extends "blog/base.html" %}
 
-{% block content %}
+{% block login %}
+
     {% if form.errors %}
         <p class="text-danger">이름과 비밀번호가 일치하지 않습니다. 다시 시도해주세요.</p>
     {% endif %}
 
     <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
-        <div class="mb-3">
+        <div class="mb-3"> 
             <label for="{{ form.username.id_for_label }}" class="form-label">{{ form.username.label_tag }}</label>
             {{ form.username }}
         </div>
