--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,13 +10,29 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="{% static 'js/post_draft_list.js' %}"></script>
     <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
     <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
     {% block scripts%}
         {% include 'blog/functions/scripts.html'%}
     {% endblock%}
+
+    <script>
+    $(document).ready(function() {
+        // 로그인 버튼 클릭 시
+        $(".loginbtn").click(function(e) {
+            
+            // noticelistArea, postlistArea 숨기기
+            $(".noticelistArea, .postlistArea").hide();
+            
+            // loginArea 보이기
+            $(".loginArea").show();
+        });
+    });
+    </script>
+
+
 </head>
 
 <body>
@@ -34,22 +50,29 @@
         <main id="body-content" class="container my-3">
             <div class="row">
                 <div class="col-md-8-mb-3">
-                    <div class="card mb-4">
+                    <div class="card mb-4 noticelistArea">
                         <div class="card-body">
-                            {% comment %} 공지사항 {% endcomment %}
-                            <h2 class="card-title text-center">공지사항</h2>
-                            {% block notice %}
+                            {% comment %} 공지사항 리스트 {% endcomment %}
+                            {% block noticelist %}
                             
                             {% endblock %}
                         </div>
                     </div>
-                    <div class="card mb-4">
+                    <div class="card mb-4 postlistArea">
                         <div class="card-body">
-                        {% comment %} 일반 게시판 {% endcomment %}
-                            <h2 class="card-title text-center">게시글</h2>
-                            {% block content %}
+                        {% comment %} 일반 게시판 리스트 {% endcomment %}
+                            {% block postlist %}
                             
                             {% endblock %}
+                        </div>
+                    </div>
+                    <div class="card mb-4 loginArea" style="display: none;">
+                        <div class="card-body">
+                        {% comment %} 로그인 {% endcomment %}
+                            {% block login %}
+                            
+                            {% endblock %}
+
                         </div>
                     </div>
                 </div>
