--- a/blog/templates/blog/post/post_list.html
+++ b/blog/templates/blog/post/post_list.html
@@ -1,6 +1,8 @@
 {% extends 'blog/base.html' %}
+{% load custom_filters %}
 
-{% block notice %}
+{% block noticelist %}
+    <h2 class="card-title text-center">공지사항</h2>
     {% with notice_flag=True %}
         <ol class="list-group">
             {% for post in notice_page_obj %}
@@ -27,7 +29,8 @@
     {% endwith %}
 {% endblock %}
 
-{% block content %}
+{% block postlist %}
+    <h2 class="card-title text-center">게시글</h2>
     {% with notice_flag=False %}
         <ol class="list-group">
             {% for post in content_page_obj %}
@@ -52,4 +55,27 @@
         </ol>
         {% include 'blog/functions/pagination.html' with page_obj=content_page_obj is_notice=notice_flag %}
     {% endwith %}
+{% endblock %}
+
+{% block login %}
+
+    {% if form.errors %}
+        <p class="text-danger">이름과 비밀번호가 일치하지 않습니다. 다시 시도해주세요.</p>
+    {% endif %}
+
+<form method="post" action="{% url 'login' %}">
+    {% csrf_token %}
+    <div class="mb-3"> 
+        <label for="{{ form.username.id_for_label }}" class="form-label">아이디</label>
+        {{ form.username|add_class:"form-control" }}
+    </div>
+    <div class="mb-3">
+        <label for="{{ form.password.id_for_label }}" class="form-label">비밀번호</label>
+        {{ form.password|add_class:"form-control" }}
+    </div>
+
+    <button type="submit" class="btn btn-primary">Login</button>
+    <input type="hidden" name="next" value="{{ next }}" />
+</form>
+<p>아직 계정이 없으신가요? <a href="{% url 'account_signup' %}" class="btn btn-link">회원가입</a></p>
 {% endblock %}
